update search by various attributes in Redis(cache). Revise highlighters in twitter data dictionary file (only choose hashtags in entities object and deleted quoted_status)

--- a/Caching/Explore Structure of Twitter dataset.ipynb
+++ b/Caching/Explore Structure of Twitter dataset.ipynb
@@ -761,10 +761,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "82c488b4-e79d-4f9d-a76d-341dea54e4d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 47596019,\n",
+       " 'id_str': '47596019',\n",
+       " 'name': 'Liputan6.com',\n",
+       " 'screen_name': 'liputan6dotcom',\n",
+       " 'location': 'Jakarta Indonesia',\n",
+       " 'url': None,\n",
+       " 'description': 'Download Apps https://t.co/Tg70sLl3Dc di sini https://t.co/DkBRaoqgmX \\nWebsite : https://t.co/Tg70sLl3Dc                                   \\nContact us: Liputan6Socmed@gmail.com',\n",
+       " 'translator_type': 'regular',\n",
+       " 'protected': False,\n",
+       " 'verified': True,\n",
+       " 'followers_count': 3675977,\n",
+       " 'friends_count': 693,\n",
+       " 'listed_count': 4806,\n",
+       " 'favourites_count': 7055,\n",
+       " 'statuses_count': 1375342,\n",
+       " 'created_at': 'Tue Jun 16 10:48:24 +0000 2009',\n",
+       " 'utc_offset': None,\n",
+       " 'time_zone': None,\n",
+       " 'geo_enabled': True,\n",
+       " 'lang': None,\n",
+       " 'contributors_enabled': False,\n",
+       " 'is_translator': False,\n",
+       " 'profile_background_color': 'E88317',\n",
+       " 'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme16/bg.gif',\n",
+       " 'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme16/bg.gif',\n",
+       " 'profile_background_tile': False,\n",
+       " 'profile_link_color': 'E88317',\n",
+       " 'profile_sidebar_border_color': 'FFFFFF',\n",
+       " 'profile_sidebar_fill_color': 'F05A31',\n",
+       " 'profile_text_color': '0099CC',\n",
+       " 'profile_use_background_image': False,\n",
+       " 'profile_image_url': 'http://pbs.twimg.com/profile_images/1196221192916439041/SuL7oIar_normal.jpg',\n",
+       " 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1196221192916439041/SuL7oIar_normal.jpg',\n",
+       " 'profile_banner_url': 'https://pbs.twimg.com/profile_banners/47596019/1585833284',\n",
+       " 'default_profile': False,\n",
+       " 'default_profile_image': False,\n",
+       " 'following': None,\n",
+       " 'follow_request_sent': None,\n",
+       " 'notifications': None}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print the last data item\n",
     "data['retweeted_status']['user']\n",
@@ -774,13 +823,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ad2ed869-96fc-4bfa-ae5b-e9b4a2e8681b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'created_at': 'Sun Apr 12 18:47:53 +0000 2020',\n",
+       " 'id': 1249408918196871168,\n",
+       " 'id_str': '1249408918196871168',\n",
+       " 'text': 'RT @liputan6dotcom: Lagi, 2 Dokter Senior Meninggal karena Corona Covid-19 https://t.co/eDbMsxFA84',\n",
+       " 'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>',\n",
+       " 'truncated': False,\n",
+       " 'in_reply_to_status_id': None,\n",
+       " 'in_reply_to_status_id_str': None,\n",
+       " 'in_reply_to_user_id': None,\n",
+       " 'in_reply_to_user_id_str': None,\n",
+       " 'in_reply_to_screen_name': None,\n",
+       " 'user': {'id': 2283278160,\n",
+       "  'id_str': '2283278160',\n",
+       "  'name': 'Mr rius',\n",
+       "  'screen_name': 'AwhexWibowo',\n",
+       "  'location': 'Yogyakarta, Indonesia',\n",
+       "  'url': None,\n",
+       "  'description': 'have fun go mad',\n",
+       "  'translator_type': 'none',\n",
+       "  'protected': False,\n",
+       "  'verified': False,\n",
+       "  'followers_count': 451,\n",
+       "  'friends_count': 608,\n",
+       "  'listed_count': 2,\n",
+       "  'favourites_count': 4625,\n",
+       "  'statuses_count': 31160,\n",
+       "  'created_at': 'Thu Jan 09 08:34:03 +0000 2014',\n",
+       "  'utc_offset': None,\n",
+       "  'time_zone': None,\n",
+       "  'geo_enabled': True,\n",
+       "  'lang': None,\n",
+       "  'contributors_enabled': False,\n",
+       "  'is_translator': False,\n",
+       "  'profile_background_color': 'C0DEED',\n",
+       "  'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "  'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "  'profile_background_tile': False,\n",
+       "  'profile_link_color': '1DA1F2',\n",
+       "  'profile_sidebar_border_color': 'C0DEED',\n",
+       "  'profile_sidebar_fill_color': 'DDEEF6',\n",
+       "  'profile_text_color': '333333',\n",
+       "  'profile_use_background_image': True,\n",
+       "  'profile_image_url': 'http://pbs.twimg.com/profile_images/1045333930910482432/9T4eZEsi_normal.jpg',\n",
+       "  'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1045333930910482432/9T4eZEsi_normal.jpg',\n",
+       "  'profile_banner_url': 'https://pbs.twimg.com/profile_banners/2283278160/1585672135',\n",
+       "  'default_profile': True,\n",
+       "  'default_profile_image': False,\n",
+       "  'following': None,\n",
+       "  'follow_request_sent': None,\n",
+       "  'notifications': None},\n",
+       " 'geo': None,\n",
+       " 'coordinates': None,\n",
+       " 'place': None,\n",
+       " 'contributors': None,\n",
+       " 'retweeted_status': {'created_at': 'Sun Apr 12 17:22:04 +0000 2020',\n",
+       "  'id': 1249387319229988865,\n",
+       "  'id_str': '1249387319229988865',\n",
+       "  'text': 'Lagi, 2 Dokter Senior Meninggal karena Corona Covid-19 https://t.co/eDbMsxFA84',\n",
+       "  'source': '<a href=\"https://dlvrit.com/\" rel=\"nofollow\">dlvr.it</a>',\n",
+       "  'truncated': False,\n",
+       "  'in_reply_to_status_id': None,\n",
+       "  'in_reply_to_status_id_str': None,\n",
+       "  'in_reply_to_user_id': None,\n",
+       "  'in_reply_to_user_id_str': None,\n",
+       "  'in_reply_to_screen_name': None,\n",
+       "  'user': {'id': 47596019,\n",
+       "   'id_str': '47596019',\n",
+       "   'name': 'Liputan6.com',\n",
+       "   'screen_name': 'liputan6dotcom',\n",
+       "   'location': 'Jakarta Indonesia',\n",
+       "   'url': None,\n",
+       "   'description': 'Download Apps https://t.co/Tg70sLl3Dc di sini https://t.co/DkBRaoqgmX \\nWebsite : https://t.co/Tg70sLl3Dc                                   \\nContact us: Liputan6Socmed@gmail.com',\n",
+       "   'translator_type': 'regular',\n",
+       "   'protected': False,\n",
+       "   'verified': True,\n",
+       "   'followers_count': 3675977,\n",
+       "   'friends_count': 693,\n",
+       "   'listed_count': 4806,\n",
+       "   'favourites_count': 7055,\n",
+       "   'statuses_count': 1375342,\n",
+       "   'created_at': 'Tue Jun 16 10:48:24 +0000 2009',\n",
+       "   'utc_offset': None,\n",
+       "   'time_zone': None,\n",
+       "   'geo_enabled': True,\n",
+       "   'lang': None,\n",
+       "   'contributors_enabled': False,\n",
+       "   'is_translator': False,\n",
+       "   'profile_background_color': 'E88317',\n",
+       "   'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme16/bg.gif',\n",
+       "   'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme16/bg.gif',\n",
+       "   'profile_background_tile': False,\n",
+       "   'profile_link_color': 'E88317',\n",
+       "   'profile_sidebar_border_color': 'FFFFFF',\n",
+       "   'profile_sidebar_fill_color': 'F05A31',\n",
+       "   'profile_text_color': '0099CC',\n",
+       "   'profile_use_background_image': False,\n",
+       "   'profile_image_url': 'http://pbs.twimg.com/profile_images/1196221192916439041/SuL7oIar_normal.jpg',\n",
+       "   'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1196221192916439041/SuL7oIar_normal.jpg',\n",
+       "   'profile_banner_url': 'https://pbs.twimg.com/profile_banners/47596019/1585833284',\n",
+       "   'default_profile': False,\n",
+       "   'default_profile_image': False,\n",
+       "   'following': None,\n",
+       "   'follow_request_sent': None,\n",
+       "   'notifications': None},\n",
+       "  'geo': None,\n",
+       "  'coordinates': None,\n",
+       "  'place': None,\n",
+       "  'contributors': None,\n",
+       "  'is_quote_status': False,\n",
+       "  'quote_count': 7,\n",
+       "  'reply_count': 12,\n",
+       "  'retweet_count': 86,\n",
+       "  'favorite_count': 108,\n",
+       "  'entities': {'hashtags': [],\n",
+       "   'urls': [{'url': 'https://t.co/eDbMsxFA84',\n",
+       "     'expanded_url': 'http://dlvr.it/RTf5SD',\n",
+       "     'display_url': 'dlvr.it/RTf5SD',\n",
+       "     'indices': [55, 78]}],\n",
+       "   'user_mentions': [],\n",
+       "   'symbols': []},\n",
+       "  'favorited': False,\n",
+       "  'retweeted': False,\n",
+       "  'possibly_sensitive': False,\n",
+       "  'filter_level': 'low',\n",
+       "  'lang': 'in'},\n",
+       " 'is_quote_status': False,\n",
+       " 'quote_count': 0,\n",
+       " 'reply_count': 0,\n",
+       " 'retweet_count': 0,\n",
+       " 'favorite_count': 0,\n",
+       " 'entities': {'hashtags': [],\n",
+       "  'urls': [{'url': 'https://t.co/eDbMsxFA84',\n",
+       "    'expanded_url': 'http://dlvr.it/RTf5SD',\n",
+       "    'display_url': 'dlvr.it/RTf5SD',\n",
+       "    'indices': [75, 98]}],\n",
+       "  'user_mentions': [{'screen_name': 'liputan6dotcom',\n",
+       "    'name': 'Liputan6.com',\n",
+       "    'id': 47596019,\n",
+       "    'id_str': '47596019',\n",
+       "    'indices': [3, 18]}],\n",
+       "  'symbols': []},\n",
+       " 'favorited': False,\n",
+       " 'retweeted': False,\n",
+       " 'possibly_sensitive': False,\n",
+       " 'filter_level': 'low',\n",
+       " 'lang': 'in',\n",
+       " 'timestamp_ms': '1586717273650'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0f4e769-a33d-4da7-9480-1f446e6576b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
