update hashtags store

--- a/Caching/Processing & Store in Redis.ipynb
+++ b/Caching/Processing & Store in Redis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "0"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,16 +781,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# del twt_user_model # for initiating"
+    "# del twt_user_model # for initiating\n",
+    "# del InnerHashtagModel\n",
+    "# del EntitiesModel\n",
+    "# del twt_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,11 +821,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ver.2 build embedded sub-model for inner-hashtags\n",
+    "# ver.2 build embedded sub-models for hashtags in entities\n",
     "\n",
     "class InnerHashtagModel(EmbeddedJsonModel):\n",
     "    text: Optional[str] = Field(index=True)\n",
@@ -846,55 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## ver.1 build embedded sub-model for hashtags\n",
-    "# class HashtagModel(EmbeddedJsonModel):\n",
-    "#     # hashtagmodel should be list!!!\n",
-    "    \n",
-    "#     # text: Optional[str] = Field(index=True, full_text_search=True, default=\"noHashTag\") # added a default here\n",
-    "#     # text: str = Field(index=True, full_text_search=True, default=\"noHashTag\")\n",
-    "#     text: Optional[str] = Field(index=True, full_text_search=True)\n",
-    "#     indices: Optional[list[int]]\n",
-    "    \n",
-    "#     class Meta:\n",
-    "#         # A redis.asyncio.Redis or redis.Redis client instance that the model will use to communicate with Redis.\n",
-    "#         database = get_redis_connection(password = \"7ptbtptp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # build embedded sub-model for entitlies (set hashtags as index)\n",
-    "\n",
-    "# # class HashtagModel(EmbeddedJsonModel):\n",
-    "# #     # hashtagmodel should be list!!!\n",
-    "    \n",
-    "# #     # text: Optional[str] = Field(index=True, full_text_search=True, default=\"noHashTag\") # added a default here\n",
-    "# #     # text: str = Field(index=True, full_text_search=True, default=\"noHashTag\")\n",
-    "# #     text: Optional[str] = Field(index=True, full_text_search=True)\n",
-    "# #     indices: Optional[list[int]]\n",
-    "    \n",
-    "# #     class Meta:\n",
-    "# #         # A redis.asyncio.Redis or redis.Redis client instance that the model will use to communicate with Redis.\n",
-    "# #         database = get_redis_connection(password = \"7ptbtptp\")\n",
-    "\n",
-    "# class EntitiesModel(EmbeddedJsonModel):\n",
-    "#     hashtags: HashtagModel\n",
-    "    \n",
-    "#     class Meta:\n",
-    "#         # A redis.asyncio.Redis or redis.Redis client instance that the model will use to communicate with Redis.\n",
-    "#         database = get_redis_connection(password = \"7ptbtptp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -940,93 +895,13 @@
        "  'created_at': '2013-12-25'}}"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "twt_list[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': 'corona', 'indices': [39, 46]}"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twt_list[1][\"entities\"][\"hashtags\"][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': 'sport', 'indices': [32, 38]}"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twt_list[1][\"entities\"][\"hashtags\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': 'kpop', 'indices': [25, 30]}"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twt_list[10][\"entities\"][\"hashtags\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'hashtags': [{'text': 'kpop', 'indices': [25, 30]}]}"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twt_list[10][\"entities\"]"
    ]
   },
   {
@@ -1038,14 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,27 +973,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 359,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40793"
-      ]
-     },
-     "execution_count": 315,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(twt_list) # 40793"
+    "# len(twt_list) # 40793"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1001,7 @@
        "4084"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1245,7 @@
        "210"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
