Add Data_store-User_information Jupyter notebook

--- a/User Information/Data store-User information.ipynb
+++ b/User Information/Data store-User information.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3f61ef55",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "244c2f94",
    "metadata": {},
    "outputs": [
@@ -99,10 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "203c2406",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 38 features in user data.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -146,14 +153,16 @@
        " 'notifications': None}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# print user information of the last data item\n",
-    "data['user']"
+    "user = data['user']\n",
+    "print('There are', len(user), 'features in user data.')\n",
+    "user"
    ]
   },
   {
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "84c09f36",
    "metadata": {},
    "outputs": [],
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6f31fd40",
    "metadata": {},
    "outputs": [],
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2f79c16c",
    "metadata": {},
    "outputs": [],
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "518a5a4d",
    "metadata": {},
    "outputs": [],
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "79d2a79f",
    "metadata": {},
    "outputs": [
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "73a47644",
    "metadata": {},
    "outputs": [],
@@ -271,11 +280,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "30ceae2d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Do not run this code.\n",
     "def insert_user_into_table(user):\n",
     "    created_at = datetime.datetime.strptime(user['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
     "    formatted_created_at = created_at.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
@@ -326,52 +336,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "9621b577",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('1000006582896295938',\n",
-       "  'yourgirlsarag',\n",
-       "  'sara',\n",
-       "  datetime.datetime(2018, 5, 25, 13, 32, 3),\n",
-       "  11349,\n",
-       "  27070),\n",
-       " ('1000027886915637250',\n",
-       "  'cheche04125843',\n",
-       "  'cheche',\n",
-       "  datetime.datetime(2018, 5, 25, 14, 56, 42),\n",
-       "  1031,\n",
-       "  5628),\n",
-       " ('1000034375973646337',\n",
-       "  'clarice8967',\n",
-       "  'clarih 🐻',\n",
-       "  datetime.datetime(2018, 5, 25, 15, 22, 29),\n",
-       "  40141,\n",
-       "  11868),\n",
-       " ('100004211',\n",
-       "  'karundhiravidan',\n",
-       "  'azakiya tamilmagan',\n",
-       "  datetime.datetime(2009, 12, 28, 17, 39, 20),\n",
-       "  70330,\n",
-       "  35871),\n",
-       " ('1000045322859634688',\n",
-       "  'barcelona9581',\n",
-       "  'barcelona958',\n",
-       "  datetime.datetime(2018, 5, 25, 16, 5, 59),\n",
-       "  29449,\n",
-       "  14216))"
+       "(('1000006582896295938', 'yourgirlsarag', 'sara', 11349, 27070),\n",
+       " ('1000027886915637250', 'cheche04125843', 'cheche', 1031, 5628),\n",
+       " ('1000034375973646337', 'clarice8967', 'clarih 🐻', 40141, 11868),\n",
+       " ('100004211', 'karundhiravidan', 'azakiya tamilmagan', 70330, 35871),\n",
+       " ('1000045322859634688', 'barcelona9581', 'barcelona958', 29449, 14216),\n",
+       " ('1000046756120363013', 'isisevang', 'áisis', 9384, 8155),\n",
+       " ('1000047984103575552',\n",
+       "  'esesesrarara34',\n",
+       "  'EsRaAa (EN YENI HESAP)😂',\n",
+       "  1459,\n",
+       "  1170),\n",
+       " ('1000055605263065088', 'zolesa_ke', 'Tsika Zolesa', 37216, 23844),\n",
+       " ('1000061119921352705', 'lejayk54', '☮️Axel☮️', 1438, 630),\n",
+       " ('1000062434126725120', 'mahin37418807', 'Mahin Mohades', 5232, 4104))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sql = \"SELECT * FROM users LIMIT 5\"\n",
+    "sql = \"SELECT * FROM users LIMIT 10\"\n",
     "cur.execute(sql)\n",
     "cur.fetchall()"
    ]
@@ -386,10 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "356ddbab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n"
+     ]
+    }
+   ],
    "source": [
     "# Do not run this code.\n",
     "cur.execute(\"SELECT * FROM users WHERE protected = 1\")\n",
@@ -414,13 +418,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "8ab98f05",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Do not run this code.\n",
     "cur.execute(\"ALTER TABLE users DROP COLUMN protected;\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4e602d7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"ALTER TABLE users DROP COLUMN created_at;\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f7819e0",
+   "metadata": {},
+   "source": [
+    "Check whether *screen_name* or *name* is unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ae1e89a2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"SELECT screen_name, COUNT(*) FROM users GROUP BY screen_name HAVING COUNT(*) > 1;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "93b2dc67",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2470"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"SELECT name, COUNT(*) FROM users GROUP BY name HAVING COUNT(*) > 1;\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6728c8c3",
+   "metadata": {},
+   "source": [
+    "Rename *id_str*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7f21db1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"ALTER TABLE users DROP PRIMARY KEY;\")\n",
+    "cur.execute(\"ALTER TABLE users CHANGE id_str userid_str VARCHAR(255) PRIMARY KEY;\")\n",
     "conn.commit()"
    ]
   },
@@ -434,13 +523,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "id": "1a3ab1c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "cur.execute(\"\"\"\n",
-    "SELECT id_str, name, screen_name, favourites_count FROM users\n",
+    "SELECT userid_str, name, screen_name, favourites_count FROM users\n",
     "ORDER BY favourites_count desc\n",
     "\"\"\")\n",
     "\n",
@@ -449,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "id": "26607ba1",
    "metadata": {
     "scrolled": true
@@ -476,7 +565,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id_str</th>\n",
+       "      <th>userid_str</th>\n",
        "      <th>name</th>\n",
        "      <th>screen_name</th>\n",
        "      <th>favourites_count</th>\n",
@@ -558,7 +647,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               id_str             name      screen_name  favourites_count\n",
+       "           userid_str             name      screen_name  favourites_count\n",
        "0  752559084881211392    ronnie cassol   ronniehowlett3           1105807\n",
        "1          1672748778          Die Mim  kulturbolschewi           1081511\n",
        "2          2184465813  dieSchatzen Oma      Tirolerin45           1002202\n",
@@ -571,7 +660,7 @@
        "9  864487498935787520  Rhonda Harbison  rhonda_harbison            828722"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,13 +673,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "id": "d0555832",
    "metadata": {},
    "outputs": [],
    "source": [
     "cur.execute(\"\"\"\n",
-    "SELECT id_str, name, screen_name, statuses_count FROM users\n",
+    "SELECT userid_str, name, screen_name, statuses_count FROM users\n",
     "ORDER BY statuses_count desc\n",
     "\"\"\")\n",
     "\n",
@@ -599,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "id": "2746d65e",
    "metadata": {},
    "outputs": [
@@ -624,7 +713,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id_str</th>\n",
+       "      <th>userid_str</th>\n",
        "      <th>name</th>\n",
        "      <th>screen_name</th>\n",
        "      <th>statuses_count</th>\n",
@@ -706,7 +795,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       id_str                                               name  \\\n",
+       "   userid_str                                               name  \\\n",
        "0  1179710990                                        OccuWorld 🏴   \n",
        "1   289118612                                        Tomthunkit™   \n",
        "2   317671787                               informazione interno   \n",
@@ -731,7 +820,7 @@
        "9  GeorgekurianINC         1537283  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,12 +836,12 @@
    "id": "8c792114",
    "metadata": {},
    "source": [
-    "Add an Index "
+    "Add an Index on *screen_name*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "adf331e4",
    "metadata": {},
    "outputs": [],
@@ -766,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "2ae44b2a",
    "metadata": {},
    "outputs": [],
