Add User information Jupyter notebook

--- a/User Information/Data store-User information.ipynb
+++ b/User Information/Data store-User information.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f8b7721",
+   "metadata": {},
+   "source": [
+    "Fangru Linghu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "d6419f2c",
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3f61ef55",
    "metadata": {},
    "outputs": [],
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "244c2f94",
    "metadata": {},
    "outputs": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "203c2406",
    "metadata": {},
    "outputs": [
@@ -153,7 +161,7 @@
        " 'notifications': None}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "518a5a4d",
    "metadata": {},
    "outputs": [],
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "79d2a79f",
    "metadata": {},
    "outputs": [
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "73a47644",
    "metadata": {},
    "outputs": [],
@@ -262,6 +270,7 @@
     "    name VARCHAR(255),\n",
     "    created_at DATETIME,\n",
     "    protected BOOLEAN,\n",
+    "    followers_count INT,\n",
     "    favourites_count INT,\n",
     "    statuses_count INT\n",
     ") CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci\n",
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "30ceae2d",
    "metadata": {},
    "outputs": [],
@@ -291,18 +300,19 @@
     "    formatted_created_at = created_at.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "    \n",
     "    sql = \"\"\"\n",
-    "    INSERT INTO users (id_str, screen_name, name, created_at, protected, favourites_count, statuses_count) \n",
-    "    VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
+    "    INSERT INTO users (id_str, screen_name, name, created_at, protected, followers_count, favourites_count, statuses_count) \n",
+    "    VALUES (%s, %s, %s, %s, %s, %s, %s, %s)\n",
     "    ON DUPLICATE KEY UPDATE\n",
     "        screen_name = VALUES(screen_name),\n",
     "        name = VALUES(name),\n",
     "        created_at = VALUES(created_at),\n",
     "        protected = VALUES(protected),\n",
+    "        followers_count = VALUES(followers_count),\n",
     "        favourites_count = VALUES(favourites_count),\n",
     "        statuses_count = VALUES(statuses_count)\n",
     "    \"\"\"\n",
     "    cur.execute(sql, (user['id_str'], user['screen_name'], user['name'], formatted_created_at, \n",
-    "                      user['protected'], user['favourites_count'], user['statuses_count']))\n",
+    "                      user['protected'], user['followers_count'], user['favourites_count'], user['statuses_count']))\n",
     "    conn.commit()\n",
     "\n",
     "\n",
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "9621b577",
    "metadata": {
     "scrolled": true
@@ -345,23 +355,24 @@
     {
      "data": {
       "text/plain": [
-       "(('1000006582896295938', 'yourgirlsarag', 'sara', 11349, 27070),\n",
-       " ('1000027886915637250', 'cheche04125843', 'cheche', 1031, 5628),\n",
-       " ('1000034375973646337', 'clarice8967', 'clarih 🐻', 40141, 11868),\n",
-       " ('100004211', 'karundhiravidan', 'azakiya tamilmagan', 70330, 35871),\n",
-       " ('1000045322859634688', 'barcelona9581', 'barcelona958', 29449, 14216),\n",
-       " ('1000046756120363013', 'isisevang', 'áisis', 9384, 8155),\n",
+       "(('1000006582896295938', 'yourgirlsarag', 'sara', 246, 11349, 27070),\n",
+       " ('1000027886915637250', 'cheche04125843', 'cheche', 33, 1031, 5628),\n",
+       " ('1000034375973646337', 'clarice8967', 'clarih 🐻', 10748, 40141, 11868),\n",
+       " ('100004211', 'karundhiravidan', 'azakiya tamilmagan', 445, 70330, 35871),\n",
+       " ('1000045322859634688', 'barcelona9581', 'barcelona958', 131, 29449, 14216),\n",
+       " ('1000046756120363013', 'isisevang', 'áisis', 306, 9384, 8155),\n",
        " ('1000047984103575552',\n",
        "  'esesesrarara34',\n",
        "  'EsRaAa (EN YENI HESAP)😂',\n",
+       "  4310,\n",
        "  1459,\n",
        "  1170),\n",
-       " ('1000055605263065088', 'zolesa_ke', 'Tsika Zolesa', 37216, 23844),\n",
-       " ('1000061119921352705', 'lejayk54', '☮️Axel☮️', 1438, 630),\n",
-       " ('1000062434126725120', 'mahin37418807', 'Mahin Mohades', 5232, 4104))"
+       " ('1000055605263065088', 'zolesa_ke', 'Tsika Zolesa', 3083, 37216, 23844),\n",
+       " ('1000061119921352705', 'lejayk54', '☮️Axel☮️', 27, 1438, 630),\n",
+       " ('1000062434126725120', 'mahin37418807', 'Mahin Mohades', 206, 5232, 4104))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,16 +393,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "356ddbab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "()\n"
-     ]
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -430,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "4e602d7a",
    "metadata": {},
    "outputs": [],
@@ -449,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "ae1e89a2",
    "metadata": {
     "scrolled": true
@@ -461,7 +475,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "93b2dc67",
    "metadata": {
     "scrolled": false
@@ -484,7 +498,7 @@
        "2470"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "7f21db1b",
    "metadata": {},
    "outputs": [],
@@ -523,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "1a3ab1c4",
    "metadata": {},
    "outputs": [],
@@ -538,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "26607ba1",
    "metadata": {
     "scrolled": true
@@ -660,7 +674,7 @@
        "9  864487498935787520  Rhonda Harbison  rhonda_harbison            828722"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "d0555832",
    "metadata": {},
    "outputs": [],
@@ -688,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "2746d65e",
    "metadata": {},
    "outputs": [
@@ -820,7 +834,7 @@
        "9  GeorgekurianINC         1537283  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "adf331e4",
    "metadata": {},
    "outputs": [],
@@ -855,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "2ae44b2a",
    "metadata": {},
    "outputs": [],
